# python-project-template

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
_setup_scripts/: init.sh  make_directories.sh  rename_project.sh  setup1_rename_project.sh  setup2_make_directories.sh  setup3_create_environment.sh
tests/: conftest.py
