[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "myproject"
dynamic = ["version"]
requires-python = ">= 3.8"
readme = "README.md"
description = "Python project template."
authors = [
  {name = "Addison Howe"},
]
dependencies = [
  "numpy>=2.2",
  "matplotlib>=3.10",
]

[project.scripts]
myproject = "myproject.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]
notebook = [
  "ipykernel",
  "ipywidgets",
]
